# gerald-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
assets/: docker-compose.yml
assets/db/: schema.sql
assets/metrics/: dashboard_datadog.json
assets/mock/bank_server/: main.py
assets/terraform/: monitors.tf  variables.tf
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: gerald-bnpl.json
src/: __init__.py  main.py
src/application/dto/: __init__.py  decision.py  plan.py
src/application/services/: __init__.py  decision_service.py  plan_service.py
src/core/: __init__.py  config.py  dependencies.py  logging.py  metrics.py
src/domain/entities/: __init__.py  decision.py  plan.py  transaction.py  webhook.py
src/domain/exceptions/: __init__.py  bank.py  base.py  decision.py  plan.py
src/domain/interfaces/: __init__.py  clients.py  repositories.py
src/infrastructure/clients/: __init__.py  bank_client.py  ledger_client.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/repositories/: __init__.py  decision_repository.py  plan_repository.py  webhook_repository.py
src/presentation/api/: router.py
src/presentation/middleware/: __init__.py  error_handler.py  logging.py  request_context.py
src/presentation/schemas/: __init__.py  (+3 more)
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_decision_api.py  test_metrics.py  test_persistence.py  test_resilience.py
tests/unit/: test_risk_scoring.py
(+14 files in other folders)
